--- a/docs/_assets/grid.css
+++ b/docs/_assets/grid.css
@@ -43,7 +43,9 @@ body[layout='layout-home'], body[layout='layout-index'] {
 .ga-foot-main {
   grid-area: foot-main;
 }
-body[layout='layout-sidebar'] {
+body[layout='layout-sidebar'],
+body[layout='layout-index'],
+body[layout='layout-blog-details'] {
   grid-auto-rows: 0; 
   grid-auto-columns: 0;
   overflow-x: hidden;
@@ -57,7 +59,10 @@ body[layout='layout-sidebar'] {
 }
 
 @media (max-width: 1024px) {
-  body[layout='layout-home'], body[layout='layout-sidebar'], body[layout='layout-index']  {
+  body[layout='layout-home'],
+  body[layout='layout-sidebar'],
+  body[layout='layout-index'],
+  body[layout='layout-blog-details']  {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: 56px minmax(350px, 1fr) auto;
