--- a/docs/_assets/theme.css
+++ b/docs/_assets/theme.css
@@ -1,3 +1,37 @@
+.navOne {
+  display: block;
+  height: 30px;
+  line-height: 20px;
+  font-size: 12px;
+}
+/* Remove bullets, margin and padding */
+.navOne ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.navOne li {
+  float: left;
+  /* Or you can use display: inline; */
+}
+/* Define the block styling for the links */
+.navOne li a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  padding: 0px 5px;
+}
+/* This is optional, however if you want to display the active link differently apply a background to it */
+.navOne li a.active {
+  background-color: #3786E1;
+}
+
+.ga-head4-main {
+  display: flex;
+  justify-content: space-around;
+}
+
 #main-header a {
   color:white;
 }
