--- a/docs/_includes/layout-home.njk
+++ b/docs/_includes/layout-home.njk
@@ -16,7 +16,16 @@
   </div>
 
   <div class="rocket-content ga-head4-main">
-    <p>head4-main</p>
+      <nav class="navOne">
+        <ul>
+          <li><a href="/">Foo</a></li>
+          <li><a href="/">Bar</a></li>
+          <li><a href="/">Wah</a></li>
+          <li><a href="/">Yada</a></li>
+          <li><a href="/">Baz</a></li>
+          <li><a href="/">YoThere</a></li>
+        </ul>
+      </nav>
   </div>
 
   <div class="ga-content-l"></div>
