--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,4 +1,4 @@
-body[layout='layout-home'], body[layout='layout-index'] {
+body[layout='layout-home'] {
   display: grid;
   grid-template-columns: 1fr 312px minmax(692px, 936px) 1fr;
   grid-template-rows: 62px 300px 50px 50px minmax(350px, 1fr) 100px;
@@ -43,9 +43,7 @@ body[layout='layout-home'], body[layout='layout-index'] {
 .ga-foot-main {
   grid-area: foot-main;
 }
-body[layout='layout-sidebar'],
-body[layout='layout-index'],
-body[layout='layout-blog-details'] {
+body[layout='layout-sidebar'] {
   grid-auto-rows: 0; 
   grid-auto-columns: 0;
   overflow-x: hidden;
@@ -60,9 +58,7 @@ body[layout='layout-blog-details'] {
 
 @media (max-width: 1024px) {
   body[layout='layout-home'],
-  body[layout='layout-sidebar'],
-  body[layout='layout-index'],
-  body[layout='layout-blog-details']  {
+  body[layout='layout-sidebar']  {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: 56px minmax(350px, 1fr) auto;
