--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -167,6 +167,10 @@ body[layout^='layout-home'] #main-header a:hover {
   #mobile-menu-trigger {
     display: none;
   }
+  
+  .mobile-home {
+    display: none;
+  }
 
   #main-header .logo-link {
     display: block;
